--- a/index.qmd
+++ b/index.qmd
@@ -15,7 +15,7 @@ Advanced spatial analysis and data science for urban planning and public policy.
 - **Final Project:** Capstone modeling challenge
 
 ## About Me
-Greetings! My name is Alexandra Stauffer, but you can call me Alex. I studied anthropology in my undergrad. This course may be a requirement for the MUSA program, but I am looking forward to learning predictability practices under different professional lens. 
+Greetings. My name is Alexandra Stauffer, but you can call me Alex. I studied anthropology in my undergrad. This course may be a requirement for the MUSA program, but I am looking forward to learning predictability practices under different professional lens. 
 
 
 ## Contact
