--- a/weekly-notes/week-02-notes.qmd
+++ b/weekly-notes/week-02-notes.qmd
@@ -5,19 +5,22 @@ date: "2025-09-15"
 
 ### Key Concepts Learned  
 - Setting up labs and learning to add data to lab.
-- [Technical skills covered]
+- The significance of census data and things to watch out for like margin of error (MOE).
+- Proxies are models that can help predict things like a good rental candidate, likelihood for a criminal to reoffend, etc. 
 
 ### Coding Techniques
-- mutate(), select(),rename()
+- mutate()
+- select()
+- rename()
+- (>%>)
 
 ### Questions & Challenges
-- [What I didn't fully understand]
-- [Areas needing more practice]
+- To pipe or not to pipe
 
 ### Connections to Policy
 - Algorithms play a role in predicting criminal justice, housing, finance, and healthcare decisions. 
 
 ### Reflection
-- [What was most interesting]
-- [How I'll apply this knowledge]
+- I want to learn more about how to adjust biases in the creation of proxy models. 
+
 
