--- a/weekly-notes/week-03-notes.qmd
+++ b/weekly-notes/week-03-notes.qmd
@@ -4,3 +4,22 @@ date: "2025-09-22"
 ---
 
 ### Key Concepts Learned  
+### Key Concepts Learned  
+- Setting up labs and learning to add data to lab.
+- The significance of census data and things to watch out for like margin of error (MOE).
+- Proxies are models that can help predict things like a good rental candidate, likelihood for a criminal to reoffend, etc. 
+
+### Coding Techniques
+- mutate()
+- select()
+- rename()
+- (>%>)
+
+### Questions & Challenges
+- To pipe or not to pipe
+
+### Connections to Policy
+- Algorithms play a role in predicting criminal justice, housing, finance, and healthcare decisions. 
+
+### Reflection
+- I want to learn more about how to adjust biases in the creation of proxy models. 
